# mcl

./: .gitignore  CMakeLists.txt  README.md  build.sh  ccup.sh  test.sh
cmake/: ENV.cmake
docs/: TODOs.md
example/: CMakeLists.txt
example/src/: CMakeLists.txt  main.c
example/src/domain/: CMakeLists.txt
example/src/infra/: CMakeLists.txt
example/src/service/: CMakeLists.txt  mcl_config_service.c  mcl_control_service.c  mcl_event_service.c  mcl_query_service.c  mcl_service.c
example/src/service/allocator/: mcl_allocator.c  mcl_allocator.h
example/src/service/associated_obj/: mcl_aggregate_entity.c  mcl_aggregate_entity.h
example/src/service/factory/: mcl_aggregator_factory.c  mcl_aggregator_factory.h  mcl_entity_factory.c  mcl_entity_factory.h  object_factory.c  object_factory.h
example/src/service/locked_unit/: mcl_locked_unit.c  mcl_locked_unit.h
example/src/service/ownership/: mcl_ownership.c
example/src/service/repo/: mcl_aggregator_repo.c  mcl_aggregator_repo.h  mcl_entity_repo.c  mcl_entity_repo.h  object_repo.h
example/src/service/repo/entity_list/: mcl_entity_list.c  mcl_entity_list.h
include/mcl/: allocator.h  array.h  assert.h  assertion.h  bit.h  config.h  container_of.h  exception.h  fwd_decl.h  interface.h  keyword.h  lambda.h  likely.h  link.h  list.h  lock.h  log.h  log_config.h  log_customized_config.h.in  log_levels.h  loop.h  macro.h  memory.h  mutex.h  repeat_macro.h  role.h  static_assert.h  status.h  stdc.h  stdtype.h  symbol.h  typedef.h  va_args_num.h
include/mcl/algo/: bit.h  loop.h  sort.h
include/mcl/array/: array.h  array_index.h  array_size.h  link_array.h
include/mcl/defer/: defer.h  defer_node.h  defer_node_allocator.h
include/mcl/except/: exception.h
include/mcl/link/: link.h  link_data.h  link_node.h  link_node_allocator.h  node.h
include/mcl/list/: list.h  list_data.h  list_node.h  list_node_allocator.h
include/mcl/lock/: atom.h  atomic.h  cond.h  future.h  lock_config.h  lock_counter.h  lockobj.h  lockptr.h  mutex.h  rwlock.h
include/mcl/log/: config.h  level.h  log.h  log_base_name.h  log_config.h  log_counter.h  log_level.h  log_print.h  log_printf.h
include/mcl/macro/: args.h  flow.h  repeat.h  symbol.h
include/mcl/map/: hash_bucket.h  hash_key.h  hash_map.h  hash_node.h  hash_node_allocator.h  hash_value.h
include/mcl/mem/: align.h  allocator.h  malloc.h  mem_config.h  mem_counter.h  memory.h  shared_ptr.h
include/mcl/msg/: msg.h  msg_priority.h  msg_queue.h
include/mcl/ringbuff/: ringbuff.h
include/mcl/task/: atom.h  cond.h  lockobj.h  lockptr.h  mutex.h  queue.h  ringbuff.h  rwlock.h  scheduler.h  task.h  (+6 more)
src/: CMakeLists.txt  link.c
src/algo/: sort.c
src/array/: array.c  link_array.c
src/defer/: defer.c  defer_node.c  defer_node_allocator.c
src/link/: link.c  link_node.c  link_node_allocator.c  node.c
src/list/: list.c  list_node.c  list_node_allocator.c
src/lock/: future.c  lock_counter.c  lockobj.c  lockptr.c
src/log/: base_name.c  color.c  color.h  level.c  log_base_name.c  log_color.c  log_color.h  log_counter.c  log_level.c  log_print.c  log_printf.c
src/map/: hash_bucket.c  hash_map.c  hash_node.c  hash_node_allocator.c
src/mem/: mem_counter.c  shared_ptr.c
src/msg/: msg.c  msg_queue.c
src/ringbuff/: ringbuff.c
src/task/: lockobj.c  lockptr.c  queue.c  ringbuff.c  scheduler.c  task.c  task_queue.c  task_scheduler.c  thread_pool.c
src/thread/: thread_launcher.c
test/: CMakeLists.txt  allocator_test.cc  array_test.cc  defer_test.cc  defer_test.cpp  exception_test.cc  hashmap_test.cc  hashmap_test.cpp  interface_test.cc  link_test.cc  list_test.cc  lock_destroy_test.cc  lock_test.cc  macro_test.cpp  mutex_test.cc  raii_test.cc  role_test.cc  sheculer_test.cc  task_pool_test.cc  va_args_num_test.cc
test/algo/: bit_test.cpp  sort_test.cpp
test/array/: array_test.cpp
test/defer/: defer_base_test.cpp  defer_test.cpp
test/except/: exception_test.cpp
test/foo_utils/: foo.cc  foo_factory.h
test/interface/: color.c  color.h  color_blue.c  color_blue.h  color_red.c  color_red.h  fill_info.h  interface_test.cc  shape.c  shape.h  shape_circle.c  shape_circle.h  shape_info.h  shape_rectangle.c  shape_rectangle.h  shape_type.h
test/interface/intf_utils/: color.c  color.h  color_blue.c  color_blue.h  color_red.c  color_red.h  color_type.h  fill_info.h  shape.c  shape.h  shape_circle.c  shape_circle.h  shape_info.h  shape_rectangle.c  shape_rectangle.h
test/keyword/: raii_test.cpp
test/link/: link_test.cpp
test/list/: list_static_test.cpp  list_test.cpp  static_list_test.cpp
test/lock/: atom_test.cpp  future_test.cpp  lockobj_test.cpp  lockptr_test.cc  lockptr_test.cpp  mutex_test.cpp  rwlock_test.cpp
test/lock/foo_utils/: foo.cpp  foo.h  foo_factory.h
test/log/: log.cpp
test/macro/: args_test.cpp  flow_test.cpp  repeat_test.cpp
test/map/: hashmap_test.cpp  static_hashmap_test.cpp
test/mem/: align_test.cc  align_test.cpp  allocator_test.cc  allocator_test.cpp  shared_ptr_test.cpp  shared_ptr_thread_test.cc  shared_ptr_thread_test.cpp
test/msg/: msg_queue_test.cpp  msg_queue_thread_test.cpp
test/ringbuff/: ringbuff_test.cpp  ringbuff_thread_test.cpp
test/role/: human.c  human_energy.c  human_energy.h  robot.c  robot_energy.c  robot_energy.h  role_test.cpp  worker.c  worker.h
test/role/role_utils/: energy.h  human.c  human_energy.c  human_energy.h  robot.c  robot.h  robot_energy.c  robot_energy.h  worker.c
test/roles/: energy.h  human.c  human.h  human_energy.c  human_energy.h  robot.c  robot_energy.c  robot_energy.h  worker.c
test/task/: atom_test.cc  demo_task.h  executed_task.h  lockobj_test.cc  lockptr_test.cc  mutex_test.cc  priority_level.h  ringbuff_test.cc  scheduler_test.cc  shared_ptr_multi_thread_test.cc  shared_ptr_thread_test.cc  task_history.h  task_scheduler_test.cc  task_scheduler_test.cpp  task_task_scheduler_test.cpp
test/task/foo_utils/: foo.cc  foo.h  foo_factory.h
test/task/task_utils/: demo_task.h  executed_task.h  task_history.h
test/thread/: thread_launcher_test.cpp
test/utils/: macro_test.cpp
(+40 files in other folders)
